# telebrief

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
examples/: analyze_active_channels.py  analyze_from_file.py  example_usage.py  simple_channels.txt
telebrief/: __init__.py  __main__.py  cli.py
telebrief/core/: __init__.py  analyzer.py  exporter.py  parser.py
telebrief/models/: __init__.py  channel.py  constants.py  metrics.py  post.py
telebrief/utils/: __init__.py  config.py  date_utils.py  logger.py
tests/: __init__.py  test_analyzer.py  test_parser.py
